--- a/boom.html
+++ b/boom.html
@@ -1,1 +1,6 @@
-<iframe src=file:///etc/passwd></iframe>
+<iframe 
+  src="file://C:/Windows/System32/drivers/etc/hosts" 
+  width="100%" 
+  height="600px" 
+  style="border:1px solid black;">
+</iframe>
