--- a/boom.html
+++ b/boom.html
@@ -1,5 +1,14 @@
+#windows
 <iframe 
   src="file://C:/Windows/System32/drivers/etc/hosts" 
+  width="100%" 
+  height="600px" 
+  style="border:1px solid black;">
+</iframe>
+
+#macos
+<iframe 
+  src="file:///etc/hosts" 
   width="100%" 
   height="600px" 
   style="border:1px solid black;">
