--- a/test_rc.html
+++ b/test_rc.html
@@ -9,4 +9,4 @@
 </body>
 </html>
 
-<a href="#" onclick="alert(Object.keys(window.bridge))">Click</a>
+<a href="java&Tab;script:alert(JSON.stringify(Object.keys(window)))">Click Me</a>
