--- a/boom.html
+++ b/boom.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <body>
-  <iframe src="file:///etc/hosts" style="display:none"></iframe>
+  <iframe src="file:///etc/hosts"></iframe>
   <script>
     // Attempt to read via fetch()
     fetch('file:///etc/hosts')
@@ -16,6 +16,7 @@
   </script>
 </body>
 </html>
+
 
 
 
